Fixed broken layout caused by hero video (small devices)

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -171,8 +171,6 @@ $carousel-control-img-width:     26px !default;
 $carousel-control-img-height:    81px !default;
 
 // Hero
-$hero-width:                     $carousel-width !default;
-$hero-height:                    $carousel-height !default;
 $hero-font-color:                #fff !default;
 $hero-heading-font-size:         ceil(($font-size-base * 5.42)) !default; // ~76px
 
